<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/_5ssp"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_10ssp"
        android:padding="@dimen/_5ssp"
        android:layout_marginHorizontal="@dimen/_10ssp"
        app:cardCornerRadius="@dimen/_8ssp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branch"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.21" />

            <TextView
                android:id="@+id/sem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="@+id/branch"
                app:layout_constraintTop_toBottomOf="@+id/branch" />

            <TextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/sem"
                app:layout_constraintTop_toBottomOf="@+id/branch" />

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="@+id/sem"
                app:layout_constraintTop_toBottomOf="@+id/sem" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/subject"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/unit"
                app:layout_constraintTop_toTopOf="@+id/unit" />

            <TextView
                android:id="@+id/pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pdf"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.032"
                app:layout_constraintStart_toStartOf="@+id/unit"
                app:layout_constraintTop_toBottomOf="@+id/unit" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>