<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/_10sdp"

        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10ssp"
            android:background="@drawable/green_background"
            android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/semester"
                   android:textColor="@color/black"
                   android:textSize="@dimen/_18ssp"
                   android:textStyle="bold"/>


               <TextView
                   android:id="@+id/semtext"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/title"
                   android:layout_marginLeft="@dimen/_26ssp"
                   android:textColor="@color/black"
                   android:textSize="@dimen/_18ssp"
                   />

           </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fee_amount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/amounttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:text="@string/description"
                    android:textSize="@dimen/_14ssp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>