<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"

            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ettname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/temail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11ssp"
            android:hint="@string/email"
            android:textColor="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ettemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11ssp"
            android:hint="@string/number"
            app:endIconMode="clear_text"
            app:prefixText="+91"
            app:prefixTextColor="@color/blue"
            app:startIconDrawable="@drawable/call">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ettnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tbranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11ssp"
            android:hint="@string/branch"
            android:textColor="@color/black"
            app:startIconDrawable="@drawable/branch">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBranch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tsubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11ssp"
            android:hint="@string/subject"
            android:textColor="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/subject">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ettSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tgender"
            android:hint="@string/gender"
            app:startIconDrawable="@drawable/gender"
            android:layout_marginTop="@dimen/_11ssp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ettgender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/texperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11ssp"
            android:hint="@string/experience"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/session">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ettexperience"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>